IMCMS-300 - New design to superadmin-pages: - Fixed z-index for shadow layout.

--- a/src/main/webapp/css_new/modal_window/imcms-modal_window.css
+++ b/src/main/webapp/css_new/modal_window/imcms-modal_window.css
@@ -6,7 +6,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 10001;
+    z-index: 10002;
 }
 
 .imcms-modal-layout--front {
